--- a/styles/style.css
+++ b/styles/style.css
@@ -1,189 +1,158 @@
+/* Estilos generales */
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Karla&display=swap");
-
-* {
+body {
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-
-.header {
-    margin-left: 90px;
-    margin-right: 90px;
-    padding: 35px;
-
-}
-
-.nav__list  {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    gap: 25px;
-    font-family: "Karla", sans-serif;
-    color: black;
-    font-weight: 400;
-    list-style: none;
-    cursor: pointer;
-    font-size: 18px;
-    color: hsl(216, 30%, 68%);
-    font-weight: bold;
-    
-}
-
-a {
-    text-decoration: none;
+  }
   
-}
-
-
-.nav__list :hover  {
-font-weight: bold;
-color: black;
-   }
-
-.nav__image {
-    margin-top: 15px;
+  header {
+    background-color: #f2f2f2;
+    padding: 20px;
     display: flex;
     justify-content: space-between;
-
-}
-
-.main__section__inicio {
-    display: flex;
-    justify-content: space-evenly;
-    height: 550px;
-    background-color: hsl(256, 26%, 20%);
-    color: white;
-    padding: 90px;
-}
-
-.main__article__inicio {
-    font-family: "Karla", sans-serif;
-    font-size: 16px;
-}
-
-#texto__inicio {
-    margin-left: 40px;
-}
-
-#list__view__plans {
-    margin-left: 40px;
-    list-style: none;
-    border: 1px solid white;
-    padding: 10px;
-    width: 150px;
-    text-align: center;
-}
-
-h1 {
-    margin-left: 40px;
-    font-family: serif;
-    font-size: 60px;
-}
-
-hr {
-    margin-left: 40px;
-    width: 130px;
-    border: solid 1px gray;
-}
-
-.main__image {
-    display: flex;
-    justify-content: right;
-    margin-right: 90px;
-}
-
-
-
-h2 {
-    font-family: serif;
-    font-size: 50px;
-    color: hsl(270, 9%, 17%);
-}
-
-.main__section__centro {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    gap: 50px;
-    margin-right: 90px;
-}
-
-
-h4 {
-    color: hsl(270, 9%, 17%);
-    font-family: serif;
-    font-size: 22px;
+  }
+  
+  .logo img {
+    height: 30px;
+  }
+  
+  nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  nav ul li {
+    display: inline;
+    margin-right: 10px;
     font-weight: bold;
-    }
-
-.snappy {
+  }
+  nav ul :hover {
+    font-weight: bold;
+    color: blue;
+  }
+ 
+  
+  nav ul li a {
+    text-decoration: none;
+    color: #333;
+  }
+  
+  main {
+    padding: 20px;
+ 
+  }
+  
+  #banner {
+    text-align: center;
+  }
+  
+  .family-photos img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+  }
+  
+  #planes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .plan {
+    width: 300px;
+    background-color: rgb(44,39,64);
+    padding: 20px;
+    margin: 10px;
+  }
+  
+  .plan h3 {
+    margin-top: 0;
+    color: white;
     
-    color: hsl(270, 9%, 17%);
+  }
+  
+  .plan p {
+    margin-bottom: 10px;
+    color: white;
     font-family: "Karla", sans-serif;
-    font-size: 22px;
-}
+   
+  }
+  
+  .btn {
+    display: inline-block;
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+  }
 
-.prices {
-    color: hsl(270, 9%, 17%);
-    font-family: "Karla", sans-serif;
-    font-size: 22px;
-}
 
-.people {
-    color: hsl(270, 9%, 17%);
-    font-family: "Karla", sans-serif;
-    font-size: 22px;
-}
-
-.footer__nav {
+  
+  footer {
+    background-color: #f2f2f2;
+    color: black;
+    padding: 20px;
+  }
+  
+  .footer-left {
     display: flex;
-    margin-left: 90px;
-    margin-right: 90px;
-}
-
-.footer__image {
+    align-items: center;
+  }
+  
+  .social-icons {
     display: flex;
-    justify-content: left;
-    margin-left: 90px;
+    margin-left: 20px;
+  }
+  
+  .social-icon {
+    color: #fff;
+    margin-right: 10px;
+  }
+  
+  .footer-right {
+    margin-top: 10px;
+  }
+  
 
-}
-
-.footer__list {
-    display: flex;
-    justify-content: right;
-    list-style: none;
-    gap: 10px;
-}
-
-#hr__footer {
-    margin-left: 90px;
-    margin-right: 90px;
-    width: 1850px;
-    border: solid 1px gray;
-}
-
-.footer__div div {
-    display: flex;
-    justify-content: space-around;
-
-
-}
-
-.tittle {
-    font-family: "Karla", sans-serif;
-    font-size: 18px;
-    color: hsl(216, 30%, 68%);
-    font-weight: bold;
-
-}
-
-.footer__div__list {
-    list-style: none;
-    font-family: "Karla", sans-serif;
-    color: hsl(270, 9%, 17%);
-    font-size: 16px;
-    font-weight: bold;
-    padding: 50px;
-}
-
-
+  
+  /* Estilos responsivos */
+  @media (max-width: 768px) {
+    header {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .logo img {
+      margin-bottom: 10px;
+    }
+  
+    nav ul {
+      margin-top: 10px;
+    }
+  
+    main {
+      padding: 10px;
+    }
+  
+    #planes {
+      flex-direction: column;
+    }
+  
+    .plan {
+      width: 100%;
+    }
+  
+    .footer-left {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .social-icons {
+      margin-top: 10px;
+    }
+  }
+  
